force-app/main/default/objects/ActionPlan__c.object
<CustomObject>
    <description>Object listing covering tasks to be done to achieve a given objective.</description>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Due Date of the last action in the Plan.</description>
        <inlineHelpText>Due Date of the last action in the Plan.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related employee (if applicable)</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>ActionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefActionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>References the reference Action Plan from which the list of tasks is cloned.
Due Dates, reminder and</inlineHelpText>
        <label>Reference Action Plan</label>
        <referenceTo>ActionPlan__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>ActionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>